--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
   "devDependencies": {
     "@dollarshaveclub/cloudworker": "0.0.10",
     "@types/hashids": "1.0.30",
-    "fastify": "1.14.1",
-    "fastify-static": "1.1.0",
     "form-data": "2.3.3",
     "npm-run-all": "4.1.5",
     "parcel-bundler": "1.11.0",
     "raw-body": "2.3.3",
+    "serve-static": "1.13.2",
     "typescript": "3.3.3"
   }
 }
