--- a/package.json
+++ b/package.json
@@ -1,35 +1,53 @@
 {
   "name": "secretmsg",
   "version": "1.0.0",
-  "description": "shhh... it's a secret",
+  "description": "Cloudflare Worker app for encrypting and decrypting messages",
+  "author": "Postlight",
+  "license": "MIT",
   "scripts": {
-    "build": "npm-run-all --silent --parallel build:*",
-    "build:client": "parcel build --log-level 1 --public-url /assets/js src/client.ts",
-    "build:worker": "parcel build --log-level 1 --no-source-maps src/worker.ts",
-    "deploy": "./deploy.sh",
-    "dev": "npm-run-all --parallel dev:worker-bundle dev:client-bundle dev:server",
-    "dev:server": "node server.js",
-    "dev:worker-bundle": "parcel watch --no-source-maps src/worker.ts",
-    "dev:client-bundle": "parcel watch --public-url /assets/js src/client.ts"
+    "build": "node scripts/build.js",
+    "deploy": "node scripts/deploy.js",
+    "lint": "eslint --ext .js,.ts,.tsx ./src",
+    "start": "node scripts/start.js",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "copy-to-clipboard": "3.0.8",
     "hashids": "1.2.2",
-    "preact": "8.4.2",
     "preact-render-to-string": "4.1.0",
-    "unistore": "3.2.1"
+    "preact": "8.4.2",
+    "unistore": "3.2.1",
+    "url-pattern": "1.0.3"
   },
   "devDependencies": {
-    "@dollarshaveclub/cloudworker": "0.0.10",
+    "@dollarshaveclub/cloudworker": "0.0.11",
     "@types/hashids": "1.0.30",
+    "@types/jest": "24.0.11",
+    "@typescript-eslint/eslint-plugin": "1.4.2",
+    "@typescript-eslint/parser": "1.4.2",
+    "acorn": "6.1.1",
+    "async": "2.6.2",
+    "aws-sdk": "2.424.0",
+    "cross-spawn": "6.0.5",
+    "css-loader": "2.1.1",
+    "eslint": "5.15.3",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-jest": "22.4.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
     "form-data": "2.3.3",
-    "npm-run-all": "4.1.5",
-    "parcel-bundler": "1.11.0",
+    "jest": "24.5.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "node-fetch": "2.3.0",
+    "null-loader": "0.1.1",
+    "prettier": "1.16.4",
     "raw-body": "2.3.3",
     "serve-static": "1.13.2",
-    "typescript": "3.3.3"
+    "style-loader": "0.23.1",
+    "ts-jest": "24.0.0",
+    "ts-loader": "5.3.3",
+    "typescript": "3.3.4000",
+    "webpack": "4.29.6",
+    "webpack-dev-middleware": "3.6.1"
   }
 }
