--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "typescript": "3.3.4000",
     "webpack": "4.29.6",
     "webpack-dev-middleware": "3.6.1"
+  },
+  "volta": {
+    "node": "10.23.1"
   }
 }
