--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@dollarshaveclub/cloudworker": "0.0.11",
+    "@types/gtag.js": "0.0.4",
     "@types/hashids": "1.0.30",
     "@types/jest": "24.0.11",
     "@typescript-eslint/eslint-plugin": "1.4.2",
