--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@dollarshaveclub/cloudworker": "0.0.11",
+    "@types/gtag.js": "0.0.4",
     "@types/hashids": "1.0.30",
     "@types/jest": "24.0.11",
     "@typescript-eslint/eslint-plugin": "1.4.2",
@@ -49,5 +50,8 @@
     "typescript": "3.3.4000",
     "webpack": "4.29.6",
     "webpack-dev-middleware": "3.6.1"
+  },
+  "volta": {
+    "node": "10.23.1"
   }
 }
