--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "copy-to-clipboard": "3.0.8",
+    "copy-to-clipboard": "^3.3.1",
     "hashids": "1.2.2",
-    "preact-render-to-string": "4.1.0",
     "preact": "8.4.2",
+    "preact-render-to-string": "4.1.0",
     "unistore": "3.2.1",
     "url-pattern": "1.0.3"
   },
